--- a/style.css
+++ b/style.css
@@ -1,12 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz@9..144&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Barlow&family=Fraunces:opsz@9..144&display=swap');
 
-
 /* -------------Variables------------- */
 
 :root{
     /*text colors*/
-    --text-white: #ffffff;
+    /*--text-white: #ffffff;
     --text-gray: #838384;
     --text-black: #000000;
     --box-shadow:0px 0px 50px 0px rgb(0 0 0 / 10%);
@@ -14,166 +13,583 @@
     --bg-green: rgb(156 217 202);
     --bg-light-blue: rgb(111 207 255);
     --bg-yellow: rgb(255 212 1);
+    */
+    --text-gray : #808291;
+    --text-white: #f8f9fa;
+    --text-light: #f6f6f6;
+    --text-dark : #1A3260;
+    --text-dark2 : #1A3760D4;
+    --text-red : #ff4d6d;
+    --box-shadow: 0px 0px 50px 0px rgb(0 0 0 / 10%);
+    /*--bg-blue: rgb(249, 243, 255);*/
+    --bg-blue: rgb(62, 191, 255);
+    --bg-red: rgb(254, 247, 252);
+    --bg-yellow:rgb(255, 255, 246);
+    --bg-purple: rgb(246, 255, 255);
 
     /*font family*/
     --font-fraunces: "Fraunces", 'serif';
     --font-barlow: "Barlow", 'sans-serif';
-
+    
+    /* gradient colors */
+    --bg-gradient : linear-gradient(to right, #ff512f, #dd2476); 
+    --bg-gradient-indigo: linear-gradient(to right, #8e2de2, #4a00e0);
+    --bg-gradient-peach: linear-gradient(to right, #fff7f3, #fff7f3);
+    
     /*images*/
     --bg-header-lg: url('./assets/desktop/image-header.jpg');
     --bg-header-sm: url('./assets/mobile/image-header.jpg');
+    --in-hamburger: url('./assets/icon-hamburger.svg');
 
 }
 
 /* -------------/Variables------------- */
 
-/*removing padding, marging and borders from all the elements*/
-*>*{
+* > * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
-/*removing auto formating from a tag*/
 a{
     text-decoration: none;
 }
 
-/*removing auto formating from ul tag*/
 ul{
     list-style-type: none;
 }
 
-/* -------------Global Classes------------- */
+
+/* ------------------- /Variables ------------------------ */
+
+/* ------------------- Global Classes ------------------------ */
+.svg-hm{
+    width: 1.3rem;
+    height: 1.3rem;
+    background: transparent;
+    /*margin-bottom: 5%;*/
+}
+.svg-hm path {
+    fill: black;
+    fill-rule: evenodd;    
+}
+
+.text-dark{
+    color: var(--text-dark);
+}
+
 .text-white{
-    color:var(--text-white);
+    color: var(--text-white);
 }
+
+.text-light{
+    color: var(--text-light);
+}
+
 .text-gray{
-    color:var(--text-gray);
+    color: var(--text-gray);
 }
-.text-black{
-    color:var(--text-black);
+
+.text-red{
+    color: var(--text-red);
 }
-.bg-white{
-    color:var(--bg-white);
+
+.bg-gradient{
+    background: var(--bg-gradient);
 }
-.bg-green{
-    color:var(--bg-green);
+
+.bg-gradient-indigo{
+    background: var(--bg-gradient-indigo);
 }
-.bg-bg-light-blue{
-    color:var(--bg-light-blue);
+
+.bg-gradient-peach{
+    background: var(--bg-gradient-peach);
 }
-.bg-yellow{
-    color:var(--bg-yellow);
+
+.bg-gradient-red{
+    background: var(--bg-red);
 }
-.bg-header-lg{
-    background-image: var(--bg-header-lg);
-    object-fit: fill;
+
+.bg-gradient-blue{
+    background: var(--bg-blue);
 }
-.bg-header-sm{
-    background-image: var(--bg-header-sm);
-    object-fit: fill;
+
+.bg-gradient-yellow{
+    background: var(--bg-yellow);
 }
-.font-fraunces{
-    font-family: var(--font-fraunces);
+
+.bg-gradient-purple{
+    background: var(--bg-purple);
 }
-.font-barlow{
+
+.font-poppins{
     font-family: var(--font-barlow);
 }
+
 .text-center{
     text-align: center;
 }
-.text-size-sm{
+
+.text-sm{
     font-size: 1em;
     line-height: 1.5em;
 }
-.text-size-lg{
+
+.text-md{
+    font-size: 1.5em;
+}
+
+.text-lg{
     font-size: 2.2em;
     line-height: 3rem;
 }
+
+.text-xl{
+    font-size: 3em;
+}
+
+.text-2xl{
+    font-size: 5em;
+}
+
 .font-bold{
     font-weight: bold;
 }
+
 .flex{
     display: flex;
 }
+
 .flex-row{
     flex-direction: row;
 }
+
 .flex-column{
     flex-direction: column;
 }
+
 .flex-wrap{
     flex-wrap: wrap;
 }
-.flex-init{
+
+.flex-initial{
     flex: 0 1 auto;
 }
+
 .flex-grow{
     flex-grow: 1;
 }
+
 .justify-center{
     justify-content: center;
 }
-.text-upper{
+
+.text-uppercase{
     text-transform: uppercase;
 }
+
 .container{
     width: 100%;
 }
+
 .container-fluid{
     width: 98%;
+    background-color: #4a00e0;
 }
+
 .mx-auto{
     margin-left: auto;
     margin-right: auto;
 }
+
 .py-2{
     padding-top: 1rem;
     padding-bottom: 1rem;
 }
+
 .py-5{
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
 }
+
 .py-10{
     padding-top: 4.5rem;
     padding-bottom: 4.5rem;
 }
+
 .px-5{
     padding-left: 1.5rem;
     padding-right: 1.5rem;
 }
+
 .px-10{
     padding-left: 3.5rem;
     padding-right: 3.5rem;
 }
+
 .link{
-    background-color: var(--bg-white);
-    color: var(--text-black);
-    font-family: var(--font-barlow);
+    color: var(--text-dark2);
+    /*font-weight: bold;*/
 }
+
 .link:hover{
-    background-color: var(--bg-light-blue);
-    color: var(--text-white);
-    font-family: var(--font-barlow);
+    color: var(--text-red);
 }
-.d-inline{
+
+.btn{
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.btn-primary{
+    padding: .8rem 2rem;
+    border-radius: 50px;
+    font-family: var(--font-barlow);
+    font-weight: bold;
+}
+
+.btn-shodow{
+    box-shadow: var(--box-shadow);
+}
+
+.btn-primary:hover{
+    background: var(--bg-gradient-indigo);
+}
+
+.bg-cover{
+    background: var(--bg-cover);
+    object-fit: fill;
+}
+
+.d-iniine{
     display: inline-block;
 }
+
 .d-block{
     display: block;
 }
+
 .grid{
     display: grid;
 }
+
 .cols-1{
-    grid-template-columns: repeat(1,maxmin(0,1fr));
+    grid-template-columns: repeat(1, minmax(0, 1fr));
 }
+
 .w-100{
     width: 100%;
 }
+
 .w-50{
     width: 50%;
 }
-/* -------------/Global Classes------------- */
+/* ------------------- /Global Classes ------------------------ */
+
+/* ------------------- Global Classes ------------------------ */
+
+.text-dark{
+    color: var(--text-dark);
+}
+
+.text-white{
+    color: var(--text-white);
+}
+
+.text-light{
+    color: var(--text-light);
+}
+
+.text-gray{
+    color: var(--text-gray);
+}
+
+.text-red{
+    color: var(--text-red);
+}
+
+.bg-gradient{
+    background: var(--bg-gradient);
+}
+
+.bg-gradient-indigo{
+    background: var(--bg-gradient-indigo);
+}
+
+.bg-gradient-peach{
+    background: var(--bg-gradient-peach);
+}
+
+.bg-gradient-red{
+    background: var(--bg-red);
+}
+
+.bg-gradient-blue{
+    background: var(--bg-blue);
+}
+
+.bg-gradient-yellow{
+    background: var(--bg-yellow);
+}
+
+.bg-gradient-purple{
+    background: var(--bg-purple);
+}
+
+.font-barlow{
+    font-family: var(--font-barlow);
+}
+
+.text-center{
+    text-align: center;
+}
+
+.text-sm{
+    font-size: 1em;
+    line-height: 1.5em;
+}
+
+.text-md{
+    font-size: 1.5em;
+}
+
+.text-lg{
+    font-size: 2.2em;
+    line-height: 3rem;
+}
+
+.text-xl{
+    font-size: 3em;
+}
+
+.text-2xl{
+    font-size: 5em;
+}
+
+.font-bold{
+    font-weight: bold;
+}
+
+.flex{
+    display: flex;
+    direction: ltr;
+}
+
+.flex-row{
+    flex-direction: row;
+}
+
+.flex-column{
+    flex-direction: column;
+}
+
+.flex-wrap{
+    flex-wrap: wrap;
+}
+
+.flex-initial{
+    flex: 0 1 auto;
+}
+
+.flex-grow{
+    flex-grow: 1;
+}
+
+.justify-center{
+    justify-content: center;
+}
+
+.text-uppercase{
+    text-transform: uppercase;
+}
+
+.container{
+    width: 100%;
+}
+
+.container-fluid{
+    width: 98%;
+}
+
+.mx-auto{
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.py-2{
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+
+.py-5{
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+}
+
+.py-10{
+    padding-top: 4.5rem;
+    padding-bottom: 4.5rem;
+}
+
+.px-5{
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+}
+
+.px-10{
+    padding-left: 3.5rem;
+    padding-right: 3.5rem;
+}
+
+.link{
+    color: var(--text-dark2);
+    /*font-weight: bold;*/
+}
+
+.link:hover{
+    color: var(--text-red);
+}
+
+.link:active{
+    background: #dd2476;
+}
+
+.btn{
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.btn-primary{
+    padding: .8rem 2rem;
+    border-radius: 50px;
+    font-family: var(--font-barlow);
+    font-weight: bold;
+}
+
+.btn-shodow{
+    box-shadow: var(--box-shadow);
+}
+
+.btn-primary:hover{
+    background: var(--bg-gradient-indigo);
+}
+
+.bg-cover{
+    background: var(--bg-cover);
+    object-fit: fill;
+}
+
+.d-iniine{
+    display: inline-block;
+}
+
+.d-block{
+    display: block;
+}
+
+.grid{
+    display: grid;
+}
+
+.cols-1{
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.w-100{
+    width: 100%;
+}
+
+.w-50{
+    width: 50%;
+}
+
+
+/* ------------------- /Global Classes ------------------------ */
+
+/* ------------------- Media Query ------------------------ */
+
+/* for sm (640px)*/
+@media (min-width: 640px) {
+    #nav .hm-btn > button{
+        display: none;
+    }
+
+    #nav{
+        flex-direction: row !important;
+        background: transparent !important;
+    }
+
+    .collapse{
+        max-height: initial !important;
+    }
+
+    .collapse ul{
+        flex-direction: row !important;
+    }
+
+    .flex{
+        display: flex;
+        direction: rtl !important;
+    }
+}
+
+/* for lg (1024px)*/
+@media (min-width: 1024px) {
+    
+}
+
+/* ------------------- /Media Query ------------------------ */
+
+
+/* ------------------- Navigation Style ------------------------ */
+#nav{
+    position: absolute;
+    top: 0; left: 0;
+    /*right: 0; top: 0;*/
+     width: 100%;
+    padding: 1rem 1.5rem;
+    background: var(--text-light);
+    /*background: var(--bg-header-lg);*/
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+}
+
+#nav .collapse{
+    max-height: 0px;
+    overflow-y: hidden;
+    transition: all 0.9s ease;
+}
+
+#nav .collapse ul{
+    flex-direction: column;
+    text-align: center;
+    padding: 0 3rem;
+}
+
+#nav .collapse ul > li{
+   padding: 0 1.5rem;
+   line-height: 1rem;
+   font-size: 1em;
+}
+
+#nav .hm-btn > button{
+    font-size: 2em;
+    position: absolute;
+    right: 0; top: 0;
+    padding: 0 1rem;
+    color: var(--text-dark2);
+}
+
+#nav .flex-initial ul button{
+    display: none;
+}
+
+.active{
+    max-height: 50vh !important;
+}
+
+
+/* ------------------- /Navigation Style ------------------------ */
